1. Added Doctor dashboard 2. Doctor upcoming appointments 3. Doctor assigned patients 4. doctor cancel appointment 5. Added age and address to User record
